Adding support to profile applications running on Docker Containers